<resources>
    <string name="app_name">SARApp</string>
    <string name="home">home</string>
    <string name="personas">Personas</string>

    <string name="noDataFound">0 resultados, intente otra busqueda o actualice la base de datos</string>
    <string name="test_data">Test Data </string>

    <!--Informacion Personal-->
    <string name="celular">Celular</string>
    <string name="direccion">Direccion</string>
    <string name="fechaNacimiento">Fecha de Nacimiento</string>
    <string name="ci">Nº Carnet Identidad</string>
    <string name="sexo">Sexo</string>
    <string name="telefonoFijo">Telefono Fijo</string>
    <string name="pais">Pais</string>
    <string name="departamento">Departamento</string>
    <string name="provincia">Provincia</string>
    <string name="capital">Capital</string>
    <string name="municipio">Municipio</string>
    <string name="nombreTutor">Nombre Tutor</string>
    <string name="celularTutor">Celular Tutor</string>
    <string name="estado">Estado</string>
    <string name="tipoPersona">Tipo Persona</string>
    <string name="grado">Grado</string>
    <string name="compania">Compañia</string>
    <string name="add_alergia">Agregar Alergia</string>
    <!--End Informacion Personal-->

    <!--Ficha medica-->
    <string-array name="grupo_sanguineo_array">
        <item>O RH negativo</item>
        <item>O RH positivo</item>
        <item>A RH negativo</item>
        <item>A RH positivo</item>
        <item>B RH negativo</item>
        <item>B RH positivo</item>
        <item>AB RH negativo</item>
        <item>AB RH positivo</item>
        <item>NO ESPECIFICADO</item>
    </string-array>
    <string name="SyncSuccessMessage">Sincronizado Correctamente</string>
    <string name="UpdateSuccessMessage">Actualizado Correctamente</string>
    <string name="UpdateErrorMessage">Ocurrio un error, intente mas tarde</string>
    <string name="FieldRequired">Complete todos los campos</string>

    <string name="loremIpsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged</string>
</resources>
