<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="bo.edu.uagrm.sarapp.viewmodels.PersonaDetailViewModel"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MergeRootFrame">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:title="@{viewModel.persona.nombreCompleto}"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:toolbarId="@+id/toolbar">

                <ImageView
                        android:id="@+id/detail_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        bind:imageFromUrl="@{viewModel.persona.fotoURL}"
                        app:layout_collapseMode="parallax"/>

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/detail_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:id="@+id/plant_detail_scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">




            <LinearLayout
                    android:layout_width="match_parent"
                          android:orientation="vertical"
                    android:layout_height="match_parent">
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                >

                    <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Test"/>
                    <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Entry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:chipIcon="@drawable/ic_home"
                            android:text="Home"/>

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/material_text_button"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Datos Fisicos"/>
                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/material_text_button2"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Familiares"/>
                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/material_text_button3"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Informacion Adicional"/>
                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/material_text_button4"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ficha Medica"/>

                </LinearLayout>
                <!--<androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:id="@+id/plant_watering"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:layout_marginStart="@dimen/margin_small"
                            android:layout_marginTop="@dimen/margin_normal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:text="@{viewModel.persona.departamento}"
                            tools:text="Watering needs: every 7 days"/>

                    <TextView
                            android:id="@+id/plant_detail"
                            style="?android:attr/textAppearanceLarge"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_small"
                            android:layout_marginStart="@dimen/margin_small"
                            android:layout_marginTop="@dimen/margin_small"
                            android:text="@{viewModel.persona.grado}"
                            android:textIsSelectable="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/plant_watering"
                            tools:text="Details about the plant"/>


                </androidx.constraintlayout.widget.ConstraintLayout>-->

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{viewModel.persona.sexo}"
                           android:hint="@string/sexo"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{Long.toString(viewModel.persona.fechaNacimiento)}"
                           android:hint="@string/fechaNacimiento"/>
                </com.google.android.material.textfield.TextInputLayout>                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{viewModel.persona.numeroCarnetIdentidad}"
                           android:hint="@string/ci"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:text="@{viewModel.persona.direccion}"
                            android:hint="@string/direccion"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{Long.toString(viewModel.persona.celular)}"
                           android:hint="@string/celular"/>
                </com.google.android.material.textfield.TextInputLayout>                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{Long.toString(viewModel.persona.telefonoFijo)}"
                           android:hint="@string/telefonoFijo"/>
                </com.google.android.material.textfield.TextInputLayout>                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{viewModel.persona.pais}"
                           android:hint="@string/pais"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{viewModel.persona.departamento}"
                           android:hint="@string/departamento"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{viewModel.persona.provincia}"
                           android:hint="@string/provincia"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{viewModel.persona.capital}"
                           android:hint="@string/capital"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{viewModel.persona.municipio}"
                           android:hint="@string/municipio"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{viewModel.persona.nombreTutor}"
                           android:hint="@string/nombreTutor"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{Long.toString(viewModel.persona.celularTutor)}"
                           android:hint="@string/celularTutor"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{viewModel.persona.estado}"
                           android:hint="@string/estado"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{viewModel.persona.tipoPersona}"
                           android:hint="@string/tipoPersona"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/txtOutlined">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                           android:text="@{viewModel.persona.grado}"
                           android:hint="@string/grado"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:tint="@android:color/white"

                app:layout_anchor="@id/plant_detail_scrollview"
                app:layout_anchorGravity="bottom|end"
                app:srcCompat="@drawable/ic_plus"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
